0.3.2
-----
1. Support ratings via TrackStat plugin.

0.3.1
-----
1. Fix missing params on certain requests.
2. Fix incorrect item count display.
3. Fix error message with A..Z groups.
4. Add option to always show menu when clicking an item in the queue.

0.3.0
-----
 1. For mobile view, show queue count and duration in toolbar of now-playing
    view instead of repeating track details.
 2. Send track_id when fetching lyrics from MAI.
 3. Clear browse history before fetching artist info - otherwise stack could get
    quite large.
 4. Fix showing entry fields when mobile keyboard is shown.
 5. Close mobile volume control 10 seconds after last change.
 6. Handle nextWindow="refresh"
 7. Use snackbar for some command response messages.
 8. If clicked item's action is a ["...", "items"] action then send a list
    request, i.e. ["...", "items", 0, 100, ...]
 9. Add 'More' action to genres.
10. Make sleep timer options accessible via long press on play/pause buttons.
11. Always add album sorts.
12. Add support for text entry fields - for creating new playlist, etc.
13. Add '+' button to queue page allowing to add any URL.
14. Add dialog to add/edit favourites.
15. Larger font size for landscape now-playing text.
16. Round volume values.
17. Add some work-arounds for older iOS browser.
18. Better handling of long strings in grid view.
19. Fix text position in desktop now playing bar when no artist/album info (as
    can happen with YouTube)
20. Lock screen and notification controls when using Chrome under Android.
21. Fix addall/playall for YouTube playlists.
22. Fix browsing 'Dynamic Playlists'
23. Add caching of local library browsing (artists, albums, genres, years).

0.2.8
-----
1. Use pointer style for grid items, to indicate they are clickable.
2. When updating steam meta-data for current queue item, use its "playlist
   index" to update correct item.
3. Only show duration if greater than 0.